# identity_recognition

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: build-and-push.yml
app/: app.py  main.py
app/dto/: api_response.py
app/exceptions/: no_face_exception.py  validation_exception.py
app/model/: face_model.py  face_preprocessor.py  model_stats.py
app/router/: app_router.py  prediction_router.py
app/services/: classifier_service.py  validator_service.py
app/utils/: logger.py  response_builder.py
data/: inference_log.csv
data/embeddings/: metadata.csv
data/models/: metrics.json  model.joblib  scaler.joblib
lab/: crop_faces.ipynb
reports/: evaluation_metrics.json
scripts/: crop_faces.py  embeddings.py  evaluate.py  train.py
tests/: conftest.py  test_prediction_router.py  test_validator_service.py
