[project]
name = "espaciodentario-neural-network"
version = "0.1.0"
description = "neural network for espaciodentario"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "imblearn>=0.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
